--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-ci-project",
+  "name": "ci-tester",
   "version": "1.0.0",
   "description": "Some description from another PR...",
   "main": "index.js",
@@ -11,7 +11,6 @@
     "tap": "^0.7.1"
   },
   "scripts": {
-    "test": "tap test/*.js"
   },
   "author": "",
   "license": "ISC"
