--- a/package.json
+++ b/package.json
@@ -1,16 +1,28 @@
 {
   "name": "ci-tester",
   "version": "1.0.0",
-  "description": "Some description from another PR...",
+  "description": "NodeJS with CI and CD cloud deploy to AWS",
   "main": "index.js",
   "directories": {
     "test": "test"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@pulumi/pulumi": "dev",
+    "@pulumi/cloud": "dev",
+    "@pulumi/cloud-aws": "dev",
+    "@pulumi/cloud-azure": "dev",
+    "body-parser": "^1.18.3",
+    "json-cycle": "^1.3.0",
+    "express": "^4.16.3"
+  },
   "devDependencies": {
-    "tap": "^0.7.1"
+    "mocha": "^5.2.0",
+    "node-mocks-http": "^1.7.3"
   },
   "scripts": {
+    "test": "mocha",
+    "deploy-test": "",
+    "deploy-prod": ""
   },
   "author": "",
   "license": "ISC"
